# Python-for-dummies

./: .gitignore  LICENSE.md  README.md  all_things.py  pyproject.toml
.RDataFiles/: 532610550.RData
.github/workflows/: linter.yml
Advanced/: Tasks.py  functions.py  strings.py
Bots/Discord/: intents.py  main.py
Bots/Module 1/: Logic_gates.py  Logic_operator.py  Tasks.py  Variables.py  While_loop.py
Bots/Parsers/: youtube_parser.py
Games/: 1.py  Fifth.py  First.py  Game.py  Guess the number.py  Guess_the_number.py  Second.py  Test.py  Third.py  ball.py  example.py  fifth.py  main.py  turtles.py
Games/Module 1/: First.py  Logic_operator.py
Games/Module 2/: Arrays.py  Functions.py  Test.py
Games/Module 3/: Classes.py  Game.py
Games/SnakeGame/: main.py  snake_settings.py
Games/pong/: pong.py
Module 1/: Logic_gates.py  Logic_operator.py  Tasks.py  Variables.py  While_loop.py
Module 2/: Arrays.py  Arrays1.py  Arrays2.py  For_loop.py  Functions.py  Tasks.py
Module 3/: Functions.py  OOP.py  OOP1.py  Tasks.py  asynchronous.py
Yandex/: input.txt  output.txt  simple_tasks.py  squares.py
en/: __init__.py
en/Module 1/: Lesson 1 - Variables.md  __init__.py
en/Module_1/: Lesson  3 - Conditional statements.md  Lesson 1 - Variables.md  Lesson 2 - Boolean algebra.md  __init__.py
en/Module_2/: Lesson 5 - Loops.md  Lesson 6 - Lists.md  __init__.py
ru/: __init__.py  all_things.py
ru/Advanced/: Tasks.py
ru/Module 1/: Tasks.py  Variables.py  While_loop.py
ru/Module 2/: Arrays1.py  For_loop.py
ru/Module 3/: Functions.py  OOP1.py  OOP2.py
(+10 files in other folders)
